--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,13 @@
     <string name ="negative_button">CANCEL</string>
     <string name="dialog_message">Are you sure you want to delete this ?</string>
     <string name="empty_title_notice">Please enter a title !</string>
+    <string name="crime_suspect_text">Choose Suspect</string>
+    <string name="crime_report_text">Send Crime Report</string>
+    <string name="crime_report">%1$s! The crime was discovered on %2$s. %3$s, and %4$s</string>
+    <string name="crime_report_solved">The case is solved</string>
+    <string name="crime_report_unsolved">The case is not solved</string>
+    <string name="crime_report_no_suspect">there is no suspect</string>
+    <string name="crime_report_suspect">CrimintalIntent Crime Report</string>
+    <string name="send_report">Send crime report via</string>
 
 </resources>
