All solutions for chapter 14 and 15

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,5 +28,6 @@
     <string name="crime_report_no_suspect">there is no suspect</string>
     <string name="crime_report_suspect">CrimintalIntent Crime Report</string>
     <string name="send_report">Send crime report via</string>
+    <string name="call_suspect">CALL SUSPECT</string>
 
 </resources>
